A corregir por: usuario1 hace las ultimas modificaciones de la pagina web

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       <nav id="primary_nav_wrap">
           <ul>
               <li class="current-menu-item"><a href="index.html" style="background-color:#C3D1ED;" class="home"><h1 class="titulo_home">Home</h1></a></li>
-              <li class="current-menu-item"><a href="Modificar contenido HTML.html" style="background-color:#C3D1ED;" class="home2"><h1 class="titulo_home2">Modificar contenido HTML</h1></a></li>
+              <li class="current-menu-item"><a href="Modificar contenido HTML.html" class="home2"><h1 class="titulo_home2">Modificar contenido HTML</h1></a></li>
               <li class="current-menu-item"><a href="Modificar atributos HTML.html"  class="home3"><h1 class="titulo_home3">Modificar atributos HTML</h1></a></li>
-              <li class="current-menu-item"><a href="Modificar estilos CSS.html" style="background-color:#C3D1ED;"  class="home4"><h1 class="titulo_home4">Modificar estilos CSS</h1></a></li>  
+              <li class="current-menu-item"><a href="Modificar estilos CSS.html"  class="home4"><h1 class="titulo_home4">Modificar estilos CSS</h1></a></li>  
           </ul>
       </nav>
   </section>
