usuario1 realiza el gh-pages.html con la informacion relevante

--- a/index.html
+++ b/index.html
@@ -74,34 +74,34 @@
             </li>
             <li>
                 Tenemos que confirmar que en el pakage.json tenga esta estructura:
-                <img src="C:\Users\Usuario\Desktop\practica obligatoria2\usuario1\img\hook11.PNG" alt="imagen"/>
+                <img src="../img/hook11.PNG" alt="imagen"/>
             </li>
             <li>
                 se crea esta estructura en el proyecto:
-                <img src="C:\Users\Usuario\Desktop\practica obligatoria2\usuario1\img\hook21.PNG" alt="imagen"/>
+                <img src="../img/hook21.PNG" alt="imagen"/>
             </li>
             <li>
                 en el archivo de pre-commit se escribe el codigo del hook:
-                <img src="C:\Users\Usuario\Desktop\practica obligatoria2\usuario1\img\hook31.PNG" alt="imagen"/>
+                <img src="../img/hook31.PNG" alt="imagen"/>
             </li>
             <li>
                 lugo ya se hace un git add y git commit y funciona:
 
-                <img src="C:\Users\Usuario\Desktop\practica obligatoria2\usuario1\img\hook41.PNG" alt="imagen"/>
+                <img src="../img/hook41.PNG" alt="imagen"/>
             </li>
            <p><b>Segundo hook:</b></p>
             <li>
                 se crea la estructura del post-checkout:
                 <br>
-                <img src="C:\Users\Usuario\Desktop\practica obligatoria2\usuario1\img\hook51.PNG" alt="imagen"/>
+                <img src="../img/hook51.PNG" alt="imagen"/>
             </li>
             <li>
                 se añade el codigo para cuando se cambie de rama se pinte en este caso el gato:
-                <img src="C:\Users\Usuario\Desktop\practica obligatoria2\usuario1\img\hook61.PNG" alt="imagen"/>
+                <img src="../img/hook61.PNG" alt="imagen"/>
             </li>
             <li>
                 el resultado al cambiar de rama:
-                <img src="C:\Users\Usuario\Desktop\practica obligatoria2\usuario1\img\hook71.PNG" alt="imagen"/>
+                <img src="../img/hook71.PNG" alt="imagen"/>
             </li>
         </ul>
         <ul>
@@ -111,25 +111,25 @@
             </li>
             <li>
                 Después hay que hacer este paso para que nos cree la carpeta:
-                <img src="C:\Users\Usuario\Desktop\practica obligatoria2\usuario1\img\hook12.PNG" alt="imagen"/>
+                <img src="../img/hook12.PNG" alt="imagen"/>
             </li>
             <li>
                 se le añade los plugins:
                 <br>
-                <img src="C:\Users\Usuario\Desktop\practica obligatoria2\usuario1\img\hook22.PNG" alt="imagen"/>
+                <img src="../img/hook22.PNG" alt="imagen"/>
             </li>
             <li>
                 Agrega un script en el archivo package.json para ejecutar ESLint antes de cada commit. Puedes hacer esto agregando el siguiente fragmento en el objeto "scripts" de tu package.json:
-                <img src="C:\Users\Usuario\Desktop\practica obligatoria2\usuario1\img\hook32.PNG" alt="imagen"/>
+                <img src="../img/hook32.PNG" alt="imagen"/>
             </li>
             <li>
                 hay que poner esto en el html:
                 <br>
-                <img src="C:\Users\Usuario\Desktop\practica obligatoria2\usuario1\img\hook42.PNG" alt="imagen"/>
+                <img src="../img/hook42.PNG" alt="imagen"/>
             </li>
             <li>
                 Si estás trabajando en un proyecto donde la convención de fin de línea es importante es posible que desees asegurarte de que todos estén usando la misma convención. Puedes configurar la propiedad core.autocrlf de Git para manejar automáticamente las conversiones entre LF y CRLF: 
-                <img src="C:\Users\Usuario\Desktop\practica obligatoria2\usuario1\img\hook52.PNG" alt="imagen"/>
+                <img src="../img/hook52.PNG" alt="imagen"/>
             </li>
         </ul>
     </section>
